--- a/css/welcome.css
+++ b/css/welcome.css
@@ -2,7 +2,7 @@
 html{
 	/* This image will be displayed fullscreen
 	background:url('background.jpg') no-repeat center center; */
-    background: url("../images/Landing.png") no-repeat center center;
+    background: url("img/Landing.png") no-repeat center center;
 	min-height:100%;
 	background-size:cover;
     /* Contain o Cover*/
@@ -13,8 +13,10 @@ body{
 }
 
 .cd-primary-nav {
-    background: rgba(155, 89, 182, 0.95) none repeat scroll 0 0;
+/*    background: rgba(155, 89, 182, 0.95) none repeat scroll 0 0;*/
+    background: rgba(79, 17, 58, 0.9) none repeat scroll 0 0;
 }
+
 .cd-primary-nav {
     padding: 80px 0;
 }
@@ -82,11 +84,11 @@ body{
     width: 100px;
 }
 .cd-primary-nav-trigger {
-    background-color: #03263d;
+    background-color: transparent;
     height: 100%;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 30%;
     width: 50px;
 }
 
