--- a/css/welcome.css
+++ b/css/welcome.css
@@ -2,7 +2,7 @@
 html{
 	/* This image will be displayed fullscreen
 	background:url('background.jpg') no-repeat center center; */
-    background: url("img/Landing.png") no-repeat center center;
+    background: url("../images/Landing.png") no-repeat center center;
 	min-height:100%;
 	background-size:cover;
     /* Contain o Cover*/
