--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ html, body {
 .cd-intro {
   position: relative;
   height: 100%;
-  background: url("../img/background.png") no-repeat center center;
+  background: url("../img/background.jpg") no-repeat center center;
   background-size: cover;
   z-index: 1;
   -webkit-font-smoothing: antialiased;
