--- a/css/ccm.css
+++ b/css/ccm.css
@@ -66,7 +66,12 @@ body {
     background-color: transparent;
     border-color: #fff;
     color: #ffffff;
-    font-size: 50px;
+    font-size: 40px;
+}
+
+.btn-primary-outline:hover, .btn-primary-outline:focus {
+    color: #E36767;
+    border-color: #E36767;
 }
 
 a:focus, a:hover, a:visited {
@@ -74,3 +79,4 @@ a:focus, a:hover, a:visited {
     text-decoration: none;
 
 }
+
