--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,8 +1,15 @@
 .intro-header {
     color: #ffffff;
-    height: 100%;
-    padding-bottom: 150px;
-    padding-top: 150px;
+    height: 50%;
+    padding-top: 130px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+}
+
+.intro-btn {
+    height: 50%;
+    padding-top: 50px;
     text-align: center;
 }
 
