--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -61,7 +61,7 @@
         </ul>
     </nav> &lt;!&ndash; cd-nav &ndash;&gt;
 -->
-    <a class="cd-primary-nav-trigger" href="#0">
+    <a class="cd-primary-nav-trigger" href="#">
         <i class="fa fa-bars fa-3x" aria-hidden="true"></i>
 
     </a> <!-- cd-primary-nav-trigger -->
