--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
     <link rel="stylesheet" href="css/welcome.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="css/ccm.css"> <!-- Resource style -->
+    <!--  <link rel="stylesheet" href="css/ccm.css"> Resource style -->
 
 
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
