--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">PRIMA 2017</a>
+            <a class="navbar-brand" href="#"><img src="img/primalogo.png"> </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <!--          <ul class="nav navbar-nav">
