Página del programa

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -14,7 +14,7 @@
             Pacific Rim region.
         </p>
 
-        <div >
+        <div class="col-lg-offset-4">
 
             <!-- Nav tabs -->
             <ul class="nav nav-tabs " role="tablist">
@@ -22,7 +22,8 @@
                 <li role="presentation"><a href="#social" aria-controls="social" role="tab" data-toggle="tab">SOCIAL</a></li>
                 <li role="presentation"><a href="#special" aria-controls="special" role="tab" data-toggle="tab">SPECIAL SESSION</a></li>
             </ul>
-
+</div>
+<div>
             <!-- Tab panes -->
             <div class="tab-content prima-program">
                 <div role="tabpanel" class="tab-pane active" id="general">
