--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -11,6 +11,9 @@
 
     <title>PRIMA</title>
 
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.google.com/specimen/Montserrat">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
