Programa-Programa general

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -11,9 +11,6 @@
 
     <title>PRIMA</title>
 
-    <link rel="stylesheet" type="text/css"
-          href="https://fonts.google.com/specimen/Montserrat">
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -48,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="img/primalogo.png"> </a>
+            <a class="navbar-brand" href="#">PRIMA 2017</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <!--          <ul class="nav navbar-nav">
