--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -106,7 +106,6 @@ body {
 
 .nav-tabs {
     border-bottom: 1px solid #fff;
-    padding-left: 360px;
     padding-top: 20px;
     padding-bottom: 20px;
 
@@ -116,3 +115,18 @@ body {
     background-color: #ffffff;
     border-color: #ffffff;
 }
+
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+    padding: 15px;
+    border-top: none !important;
+    border-bottom: none !important;
+    font-size: 15px;
+    color: #2C2C2C;
+    text-align: center;
+}
+
+.p-table {
+    padding-top: 15px;
+    color: #73BAC5;
+}
+
