Home page Menu ingles

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -45,54 +45,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="img/primalogo.png"> </a>
+            <a class="navbar-brand" href="home"><img src="img/primalogo.png"> </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <!--          <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link</a></li>
-                          </ul>
-                        </li>
-                      </ul>-->
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Programa</a></li>
-                <li><a href="#">Registro</a></li>
-                <li><a href="#">Conferencia Plenaria</a></li>
-                <li><a href="#">Becas</a></li>
-                <li><a href="#">Patrocinadores</a></li>
-                <li><a href="#">Oaxaca</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="program">Program</a></li>
+                <li><a href="#">Registration</a></li>
+                <li><a href="plenary-speakers">Plenary Speakers</a></li>
+                <li><a href="finantial-assistance">Finantial Assistance</a></li>
+                <li><a href="sponsors">Sponsors</a></li>
+                <li><a href="oaxaca">Oaxaca</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 {% block content %}
-    <div class="prima-header">
-        <div class="prima-header-content">
-            <h3>PRIMA 2017</h3>
-            <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
 
-        </div>
-    </div>
+    {# Content #}
 
-    <div class="container">
-        <div class="page-header">
-            <h1>Sticky footer with fixed navbar</h1>
-        </div>
-        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
-        <p>Back to <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
-    </div>
 {% endblock %}
 
 {% block footer %}
