--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -70,16 +70,16 @@
 <nav>
     <ul class="cd-primary-nav ">
 
-        <li><a href="#0"><strong>Programa</strong></a></li>
-        <li><a href="#0">Registro</a></li>
-        <li><a href="#0">Conferencia Plenaria</a></li>
+        <li><a href="program"><strong>Program</strong></a></li>
+        <li><a href="#">Registration</a></li>
+        <li><a href="plenary-speakers">Plenary Speakers</a></li>
 
 
-        <li><a href="#0">Becas</a></li>
-        <li><a href="#0">Patrocinadores</a></li>
-        <li><a href="#0">Oaxaca</a></li>
+        <li><a href="#finantial-assistance">Finantial Assistance</a></li>
+        <li><a href="#0">Sponsors</a></li>
+        <li><a href="oaxaca">Oaxaca</a></li>
 
-        <li><a href="#0">Contacto</a></li>
+        <li><a href="contact">Contact</a></li>
 
     </ul>
 </nav>
