--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -2,19 +2,67 @@
 
 {% block content %}
 
-    <div class="container prima-title">
-        <div><strong>PROGRAM</strong></div>
+ {#       <div class="prima-header">
+            <div class="prima-header-content">
+                <h3>PRIMA 2017</h3>
+                <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
+
+            </div>
+        </div>#}
+    <div class="prima-banner">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-6">
+                <h3>PRIMA 2017</h3>
+                <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
+            </div>
+        </div>
     </div>
 
-    <div class="container prima-content">
-        <p class="text-justify">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
-            Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences
-            institutes, departments and societies from around the Pacific Rim, established in 2005 with the
-            aim of promoting and facilitating the development of the mathematical sciences throughout the
-            Pacific Rim region.
-        </p>
-    </div>
+    <div class="container">
 
+        <div class="page-header text-center"><h2>Organizing Committee<h2></div>
+        <div class="row text-center">
+            <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-circle text-center"><br>
+                <h4 class="text-muted">Rolando Jiménez <br><small>Instituto de Matemáticas, UNAM</small></h4>
+            </div>
+            <div class="col-md-3"><img src="img/FirstPage_Daniel.png" alt="..." class="img-circle"><br>
+                <h4 class="text-muted">Daniel Juan<br><small>Centro de Ciencias Matemáticas, UNAM</small></h4>
+            </div>
+            <div class="col-md-3"><img src="img/FirstPage_silvia.png" alt="..." class="img-circle"><br>
+                <h4 class="text-muted">Silvia Millan<br><small>Centro de Investigación en Matemáticas</small></h4>
+            </div>
+            <div class="col-md-3"><img src="img/FirstPage_seade.png" alt="..." class="img-circle"><br>
+                <h4 class="text-muted">José A. Seade<br><small>Instituto de Matemáticas, UNAM</small></h4>
+            </div>
+        </div>
+
+        <div class="page-header text-center"><h2>Scientific Committee<h2></div>
+        <div class="row prima-content">
+            <div class="col-md-4"><h3>Maria Chudnovsky <small>Columbia University</small></h3></div>
+            <div class="col-md-4"><h3>Kenji Fukaya <small>Simons Center, Stony Brook</small></h3></div>
+            <div class="col-md-4"><h3>Peter Sarnak <small>Princeton</small></h3></div>
+            <div class="col-md-4"><h3>Jongil Park <small>Seoul National University</small></h3></div>
+            <div class="col-md-4"><h3>Kyoji Saito <small>Kavli-IPMU, Tokyo</small></h3></div>
+            <div class="col-md-4"><h3>Patricio Felmer <small>CMM, Universidad de Chile</small></h3></div>
+            <div class="col-md-4"><h3>Weinan E <small>Peking U/Princeton</small></h3></div>
+            <div class="col-md-4"><h3>Alan Carey <small>Aust.National University</small></h3></div>
+            <div class="col-md-4"><h3>Sujatha Ramdorai <small>UBC, Canada</small></h3></div>
+            <div class="col-md-4"><h3>Alberto Verjovsky <small>UNAM, Mexico</small></h3></div>
+            <div class="col-md-4"><h3>Hinke Osinga <small>University of Auckland</small></h3></div>
+            <div class="col-md-4"><h3>Alice Guionnet <small>MIT</small></h3></div>
+        </div>
+
+        <div class="page-header text-center"><h2>Location<h2></div>
+        {#<div class="container prima-content">
+            <p class="text-justify">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
+                Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences
+                institutes, departments and societies from around the Pacific Rim, established in 2005 with the
+                aim of promoting and facilitating the development of the mathematical sciences throughout the
+                Pacific Rim region.
+            </p>
+        </div>#}
+    </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.343408476283!2d-96.72601266887976!3d17.06308234772094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c72249df26d9b1%3A0xac88a77657dffc3b!2sOaxaca!5e0!3m2!1sen!2smx!4v1481739618410" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 {% endblock %}
 
 
